# policy-gate

./: .gitignore  Cargo.toml  README.md  RED_TEAM.md  SAFETY_MANUAL.md  channel_a.smt2  deployment.md  firewall.example.toml  firewall.toml  index.ts  intent_patterns.rs  lib.rs  mod.rs  package-lock.json  package.json  rules.rs  simulate_audit.py  states.rs  tsconfig.json  types.rs  verify_probing_sequences.py  voter.rs
.cargo/: config.toml
.github/workflows/: safety-verification.yml  security.yml
crates/firewall-cli/: Cargo.toml
crates/firewall-cli/src/: main.rs
crates/firewall-core/: Cargo.toml  audit_chain.seal  firewall.toml
crates/firewall-core/benches/: normalise.rs
crates/firewall-core/src/: advisory.rs  audit.rs  config.rs  conversation.rs  egress.rs  ingress.rs  init.rs  lib.rs  orchestrator.rs  pre_scan.rs  profile.rs  review.rs  semantic.rs  semantic_generated.rs  session.rs  types.rs  verdict_build.rs  voter.rs
crates/firewall-core/src/fsm/: egress.rs  intent_patterns.rs  mod.rs  states.rs
crates/firewall-core/src/rule_engine/: egress.rs  mod.rs  rules.rs
crates/firewall-core/tests/: conformance_corpus.rs  divergence_stats.rs  egress_channel_tests.rs  egress_tests.rs  gap_analysis_tests.rs  gap_analysis_tests_2.rs  hacker_bypass_tests.rs  integration_tests.rs  investigation_tests.rs  profile_verification.rs  red_team_tests.rs  semantic_tests.rs  session_aware_e2e.rs  session_tests.rs  toml_verification.rs  zalgo_stress_tests.rs
crates/firewall-fuzz/: Cargo.toml
crates/firewall-fuzz/fuzz_targets/: fuzz_channel_a.rs  fuzz_evaluate_raw.rs  fuzz_normalise.rs
crates/firewall-napi/: Cargo.toml  build.rs
crates/firewall-napi/src/: lib.rs
crates/firewall-pyo3/: Cargo.toml  pyproject.toml
crates/firewall-pyo3/src/: lib.rs
crates/firewall-wasm/: Cargo.toml
crates/firewall-wasm/src/: lib.rs
docs/: revision_history.md
fuzz/: Dockerfile  debug_build.sh  docker-compose.yml  run_fuzz.sh  test_build.sh
plans/: suggest_new_ip_pattern_design.md
policy-hub/: README.md
policy-hub/presets/: permissive.toml  strict.toml
scripts/: build-native.js  conformance.js  conformance.py  generate_centroids.py  requirements-centroids.txt  smoke.js  smoke.py
verification/: benchmark_datasets.py  channel_a.smt2  check_pattern_hash.py  conformance_corpus.json  disagreement_analytics.py  fp_rate_test.py  operator_review.py  operator_review_architecture.md  rule_engine.smt2  run_proofs.py  voter.smt2
