[package]
name = "firewall-napi"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
firewall-core = { path = "../firewall-core", default-features = false }
napi = { version = "2", features = ["async"] }
napi-derive = "2"
serde = { workspace = true }
serde_json = "1"

[build-dependencies]
napi-build = "2"
