[package]
name = "firewall-pyo3"
version = "0.1.0"
edition = "2021"
license.workspace = true

# NOT part of the safety function.
# See SAFETY_MANUAL.md §8.1 OC-06.
# pyo3 requires unsafe internally — #![forbid(unsafe_code)] is NOT applied here.
#![deny(clippy::all)]

[lib]
name = "policy_gate"
crate-type = ["cdylib"]

[dependencies]
firewall-core = { path = "../firewall-core", default-features = false }
pyo3 = { version = "0.21", features = ["extension-module"] }
serde_json = "1"

[dev-dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
