[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "policy-gate"
version = "0.1.0"
description = "Python binding for policy-gate — deterministic LLM input safety gate"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["llm", "safety", "firewall", "prompt-injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "policy_gate"
