[package]
name = "firewall-wasm"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
firewall-core = { path = "../firewall-core", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
